# dogs-business

./: .babelrc.js  .eslintrc.js  .gitignore  README.md  database.md  manifesto.md  package-lock.json  package.json  scenarios.md  service.js  webpack-test.config.js  webpack.config.js
.github/workflows/: deploy-cdk.yml  deploy-client.yml  verify-cdk.yml  verify-client.yml
cdk/: README.md  cdk.json  package.json  pnpm-lock.yaml
cdk/lambda/: Cargo.toml
cdk/lambda/business-core/: Cargo.toml
cdk/lambda/business-core/benches/: web_mercator_calculation.rs
cdk/lambda/business-core/src/: lib.rs  mvt.rs  tables.rs  types.rs  web_mercator.rs
cdk/lambda/dogs-business-api/: Cargo.toml
cdk/lambda/map-api/: Cargo.toml  build.rs
cdk/lambda/map-api/benches/: web_mercator_calculation.rs
cdk/lambda/map-api/src/: lib.rs  mvt.rs  web_mercator.rs
cdk/lambda/map-api/src/mvt/: symbol.rs
cdk/lambda/map-api/src/protos/: mod.rs
cdk/lambda/resource-api/: Cargo.toml
cdk/lambda/resource-api/src/: lib.rs
cdk/lib/: api-distribution.ts  app-distribution.ts  business-record-table.ts  cdk-stack.ts  deployment-stage.ts  distribution.ts  dogs-business-api.ts  map-api.ts  oidc-config.ts  resource-api.ts  resource-table.ts  service-paths.ts  ssm-parameters.ts  stack-outputs.ts  stack-reader.ts
cdk/test/: deployment-stage.test.ts
client/: .env.example  .env.test  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.mts
client/src/: App.vue  main.ts  vite-env.d.ts
client/src/assets/: base.css  (+8 more)
docs/: index.html  main.js
src/: index.ejs  index.js
src/components/: app.vue  business-record-input.vue  business-record-list-frame.vue  business-record-list.vue  business-statistics.vue  dog-profile-modal.vue  dog-registration-modal.vue  map-controller.vue  map-pane.vue  navigation-bar.vue  record-deletion-dialog.vue
src/db/: database.js  index.js
src/indexed-db/: database.js  index.js
src/scss/: buefy.scss  bulma-colors.scss  index.scss
src/store/: index.js  user.js
src/utils/: geolocation-tracker.js  random-id.js
test/: setup-chai.js  setup-global.js
test/utils/: random-id.spec.js
(+93 files in other folders)
