[workspace]
resolver = "3"
members = ["business-core", "map-api", "resource-api"]

[workspace.dependencies]
aws-config = "1.8"
aws-sdk-dynamodb = "1.92"
aws-smithy-async = "1.2"
business-core = { path = "./business-core" }
derive_builder = "0.20"
futures = "0.3"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
