[package]
name = "business-core"
version = "0.1.0"
edition = "2024"
description = "Dog's Business core library"

[dependencies]
aws-sdk-dynamodb.workspace = true
aws-smithy-async.workspace = true
derive_builder.workspace = true
futures.workspace = true
pin-project.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = "0.7"
serde_json = "1.0"

[[bench]]
name = "web_mercator_calculation"
harness = false
