[package]
name = "map-api"
version = "0.1.0"
edition = "2021"
description = "Dog's Business Map API"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-smithy-async.workspace = true
base64 = "0.22"
derive_builder = "0.20"
futures.workspace = true
lambda_runtime = "0.13"
pin-project.workspace = true
protobuf = "3.7"
serde.workspace = true
thiserror = "2.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[build-dependencies]
protobuf-codegen = "3.7"
protoc-bin-vendored = "3.2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "web_mercator_calculation"
harness = false
